--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -48,8 +48,8 @@
         </div>
 
           <!-- jQuery -->
-{#    <script src="js/jquery.js"></script>#}
-    <script src="{% static "js/jquery.js" %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
+{#    <script src="{% static "js/jquery.js" %}"></script>#}
 
 
     <!-- Bootstrap Core JavaScript -->
