--- a/home/templates/home/includes/contacts.html
+++ b/home/templates/home/includes/contacts.html
@@ -10,32 +10,32 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form action="//formspree.io/admin@multimarta.co.il" method="POST" name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                                    <input type="text" name="name" class="form-control" placeholder="Ваше имя *" id="name" required data-validation-required-message="Как вас зовут?">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                                    <input type="email" name="_replyto" class="form-control" placeholder="Ваш Email *" id="email" required data-validation-required-message="Не забудте email.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <input type="tel" class="form-control" placeholder="Телефон *" id="phone" required data-validation-required-message="На какой номер заонить?">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                    <textarea class="form-control" placeholder="Спросите нас *" id="message" required data-validation-required-message="Не стесняйтесь, спрашивайте."></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Отправить</button>
+                                <button type="submit" value="Send" class="btn btn-xl">Отправить</button>
                             </div>
                         </div>
                     </form>
