--- a/home/templates/home/includes/contacts.html
+++ b/home/templates/home/includes/contacts.html
@@ -10,7 +10,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form action="//formspree.io/admin@multimarta.co.il" method="POST" name="sentMessage" id="contactForm" novalidate>
+                    <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
