--- a/home/templates/home/includes/carousel.html
+++ b/home/templates/home/includes/carousel.html
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">0549438101</a>
+                <a class="navbar-brand page-scroll" href="#page-top">MARTA</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,9 +20,9 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-{#                    <li>#}
-{#                        <a class="page-scroll" href="#{{ menuitem.title }}">{{ menuitem.title }}</a>#}
-{#                    </li>#}
+                    <li>
+                        <a class="page-scroll" href="tel:0549438101">0549438101</a>
+                    </li>
                     <li>
                         <a class="page-scroll" href="#video">Видео</a>
                     </li>
@@ -51,7 +51,6 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">MARTA</div>
                 <div class="intro-heading">мультиварки и скороварки</div>
                 <a href="#video" class="page-scroll btn btn-xl">смотреть видео</a>
             </div>
