--- a/home/templates/home/includes/product.html
+++ b/home/templates/home/includes/product.html
@@ -1,4 +1,4 @@
-{% load wagtailimages_tags wagtailembeds_tags %}
+{% load wagtailimages_tags wagtailembeds_tags wagtailcore_tags %}
     <section id="portfolio" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -50,7 +50,7 @@
                             <p class="item-intro text-muted">{{ product_item.caption }}.</p>
                             {% image product_item.image width-400 as product_image %}
                             <img class="img-responsive img-centered" src="{{ product_image.url }}" alt="">
-                            <p>{{ product_item.description }}</p>
+                            <p>{{ product_item.description|richtext }}</p>
                             <div class="row text-center" style="box-shadow: 0px 4px 40px 3px rgba(0, 0, 0, 0.5);">
                                 <div class="embed-responsive embed-responsive-16by9">
                                   <iframe class="embed-responsive-item"  src="{{ product_item.video }}"></iframe>
