--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -58,11 +58,13 @@
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/classie/1.0.1/classie.min.js"></script>
-    <script src="{% static "js/cbpAnimatedHeader.min.js" %}"></script>
+{#    <script src="{% static "js/cbpAnimatedHeader.min.js" %}"></script>#}
+    <script src="https://martalp.s3.amazonaws.com/static/js/cbpAnimatedHeader.min.js"></script>
 
     <!-- Contact Form JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqBootstrapValidation/1.3.7/jqBootstrapValidation.min.js"></script>
-    <script src="{% static "js/contact_me.js" %}"></script>
+{#    <script src="{% static "js/contact_me.js" %}"></script>#}
+    <script src="https://martalp.s3.amazonaws.com/static/js/contact_me.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-agency/1.0.6/js/agency.min.js"></script>
