--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -6,6 +6,9 @@
 <head>
 
     <meta charset="utf-8">
+{#    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">#}
+    <link rel="shortcut icon" href="{% static "images/favicon.ico" %}" type="image/x-icon">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
