--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -10,8 +10,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Мультиварки MARTA в Израиле | Мультиварки в Израиле">
 
     <title>MARTA</title>
 
@@ -21,7 +20,6 @@
         {% compress css %}
 
     <!-- Custom CSS -->
-{#    <link href="css/agency.css" rel="stylesheet">#}
     <link rel="stylesheet" type="text/x-scss" href="{% static "css/agency.css" %}" />
         {% endcompress %}
 
