--- a/martalp/templates/404.html
+++ b/martalp/templates/404.html
@@ -1,9 +1,30 @@
 {% extends "base.html" %}
-
-{% block body_class %}template-404{% endblock %}
-
+{% load i18n %}
+{% block title %}О нет! Страница не найдена =({% endblock %}
 {% block content %}
-    <h1>Page not found</h1>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
 
-    <h2>Sorry, this page could not be found.</h2>
+    <header id="home">
+        <div class="container text-center">
+            <p style="z-index:100;
+               position:absolute;
+               color:white;
+               font-size:36px;
+               font-weight:bold;
+               left:150px;
+               top:350px;">
+                404 Page not found <br>
+                О нет! Страница не найдена :( <br>
+                Но вот вам котики!</p>
+            <a href="http://thecatapi.com">
+                <img src="http://thecatapi.com/api/images/get?format=src&type=gif"
+                style="position:absolute;
+                left:0;
+                top:0;
+                width: 100%;
+                height: 100%">
+           </a>
+        </div>
+    </header>
+
 {% endblock %}
