--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -20,7 +20,8 @@
         {% compress css %}
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/x-scss" href="{% static "css/agency.css" %}" />
+{#    <link rel="stylesheet" type="text/x-scss" href="{% static "css/agency.css" %}" />#}
+    <link rel="stylesheet" type="text/x-scss" href="https://martalp.s3.amazonaws.com/static/css/agency.css" />
         {% endcompress %}
 
 
