--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -70,6 +70,24 @@
     <!-- Custom Theme JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-agency/1.0.6/js/agency.min.js"></script>
 
+    <!-- BEGIN JIVOSITE CODE {literal} -->
+    <!-- BEGIN JIVOSITE CODE {literal} -->
+    <script type='text/javascript'>
+    (function(){ var widget_id = '3M8bMHm9BM';
+    var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);})();</script>
+    <!-- {/literal} END JIVOSITE CODE -->
+
+
+        <script type="text/javascript">
+            var _cp = {trackerId: 24242};
+            (function(d){
+                var cp=d.createElement('script');cp.type='text/javascript';cp.async = true;
+                cp.src='//tracker.cartprotector.com/cartprotector.js';
+                var s=d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(cp, s);
+            })(document);
+        </script>
+
+
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (d, w, c) {
