--- a/home/templates/home/includes/product.html
+++ b/home/templates/home/includes/product.html
@@ -21,7 +21,7 @@
                         <img src="{{ product_image.url }}" class="img-responsive">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>{{ product_item.caption }}₪</h4>
+                        <h4>{{ product_item.caption }}</h4>
                     </div>
                 </div>
                 {% endfor %}
