--- a/home/templates/home/includes/carousel.html
+++ b/home/templates/home/includes/carousel.html
@@ -36,6 +36,10 @@
                         <a class="page-scroll" href="#services">Доставка</a>
 
                     </li>
+{#                    <li>#}
+{#                        <a class="page-scroll" href="#team">Отзывы</a>#}
+{##}
+{#                    </li>#}
                     <li>
                         <a class="page-scroll" href="#contact">Контакты</a>
                     </li>
