--- a/home/templates/home/includes/product.html
+++ b/home/templates/home/includes/product.html
@@ -15,6 +15,7 @@
                             <div class="portfolio-hover-content">
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                                 <b><h4>нажмите, чтобы узнать подробности</h4></b>
+                                <h1><span class="label label-danger">{{ product_item.sale }}₪</span></h1>
                             </div>
                         </div>
                         {% image product_item.image width-400 as product_image %}
@@ -55,6 +56,12 @@
                             {% image product_item.image width-400 as product_image %}
                             <img class="img-responsive img-centered" src="{{ product_image.url }}" alt="">
                         <br>
+                        <p>
+                                <li><strong>обычная цена<h1>{{ product_item.price }} ₪</h1></strong></li>
+                            {% if product_item.sale %}
+                                <li style="color: #e74c3c;"><strong>цена для вас<h1>{{ product_item.sale }} ₪</h1></strong></li>
+                            {% endif %}
+                            </p>
                             <div class="row text-center" style="box-shadow: 0px 4px 40px 3px rgba(0, 0, 0, 0.5);">
                                 <div class="embed-responsive embed-responsive-16by9">
                                   <iframe class="embed-responsive-item"  src="{{ product_item.video }}"></iframe>
