--- a/home/templates/home/includes/product.html
+++ b/home/templates/home/includes/product.html
@@ -15,14 +15,14 @@
                             <div class="portfolio-hover-content">
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                                 <b><h4>нажмите, чтобы узнать подробности</h4></b>
-                                <h1><span class="label label-danger">{{ product_item.sale }}₪</span></h1>
                             </div>
                         </div>
                         {% image product_item.image width-400 as product_image %}
                         <img src="{{ product_image.url }}" class="img-responsive">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>{{ product_item.caption }}</h4>
+                        <h4>{{ product_item.caption }}
+                            <span class="label label-success">{{ product_item.sale }}₪</span></h4>
                     </div>
                 </div>
                 {% endfor %}
