--- a/home/templates/home/includes/product.html
+++ b/home/templates/home/includes/product.html
@@ -22,7 +22,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>{{ product_item.caption }}
-                            <span class="label label-success">{{ product_item.sale }}₪</span></h4>
+                            <span class="label label-danger">{{ product_item.sale }}₪</span></h4>
                     </div>
                 </div>
                 {% endfor %}
