--- a/home/templates/home/includes/carousel.html
+++ b/home/templates/home/includes/carousel.html
@@ -32,10 +32,10 @@
                     <li>
                         <a class="page-scroll" href="#about">Преимущества</a>
                     </li>
-{#                    <li>#}
-{#                        <a class="page-scroll" href="#team">Отзывы</a>#}
-{##}
-{#                    </li>#}
+                    <li>
+                        <a class="page-scroll" href="#team">О нас пишут</a>
+
+                    </li>
                     <li>
                         <a class="page-scroll" href="#services">Доставка</a>
 
