--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -7,7 +7,7 @@
     {% include "home/includes/video.html" with video_items=self.video_items.all only %}
     {% include "home/includes/product.html" with product_items=self.product_items.all only %}
     {% include "home/includes/advantage.html" with advantage_items=self.advantage_items.all only %}
-{#    {% include "home/includes/testimonials.html" with testimonial_items=self.testimonial_items.all only %}#}
+    {% include "home/includes/testimonials.html" with testimonial_items=self.testimonial_items.all only %}
     {% include "home/includes/service.html" with service_items=self.service_items.all only %}
     {% include "home/includes/contacts.html" %}
 
