--- a/home/templates/home/includes/carousel.html
+++ b/home/templates/home/includes/carousel.html
@@ -10,7 +10,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">MARTA</a>
+{#                <a class="navbar-brand page-scroll" href="#page-top">MARTA</a>#}
+                <a class="page-scroll" href="#page-top"><img src="https://s3-us-west-2.amazonaws.com/martalp/static/images/logo.png" width="146px" height="65px"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
