--- a/home/templates/home/includes/carousel.html
+++ b/home/templates/home/includes/carousel.html
@@ -42,6 +42,10 @@
 
                     </li>
                     <li>
+                        <a class="page-scroll" href="#recipes">Рецепты</a>
+
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Контакты</a>
                     </li>
 {#                    {% endfor %}#}
