--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -10,8 +10,8 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Мультиварки MARTA в Израиле | Мультиварки в Израиле">
-
+    <meta name="description" content="Мультиварки MARTA в Израиле | самые экологичные чаши.">
+    <meta name="keywords" content="мультиварка,  мультиварка-скороварка, скороварка, marta, цена, обзор, купить" />
     <title>MARTA</title>
 
     <!-- Bootstrap Core CSS -->
