--- a/home/templates/home/includes/product.html
+++ b/home/templates/home/includes/product.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Выбираем мультиварку</h2>
-                    <h3 class="section-subheading text-muted">Все модели с описанием и видеообзорами.</h3>
+                    <h2 class="section-heading">давайте вместе выберем мультиварку!</h2>
+                    <h3 class="section-subheading text-muted">Все модели представлены ниже с описанием и видеообзорами (кликните на изображение)</h3>
                 </div>
             </div>
             <div class="row">
