--- a/home/templates/home/includes/advantage.html
+++ b/home/templates/home/includes/advantage.html
@@ -4,8 +4,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">МАРТА</h2>
-                    <h3 class="section-subheading text-muted">Преимущества мультиварок</h3>
+                    <h2 class="section-heading">Почему именно мультиварка MARTA?</h2>
+                    <h3 class="section-subheading text-muted">Почему клиенты выбирают именно MARTA?
+Преимущества наших продуктов</h3>
                 </div>
             </div>
             <div class="row">
@@ -46,9 +47,9 @@
                         {% endfor %}
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Будь
-                                    <br>частью
-                                    <br>лучшего</h4>
+                                <h4>Позволь лучшему
+                                    стать
+                                    <br>твоим</h4>
                             </div>
                         </li>
                     </ul>
