--- a/home/templates/home/includes/recipes.html
+++ b/home/templates/home/includes/recipes.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Видео рецепты</h2>
-                    <h3 class="section-subheading text-muted">Что можно приготовить в мультиварке?</h3>
+                    <h2 class="section-heading">Наши Видео РЕЦЕПТЫ </h2>
+                    <h3 class="section-subheading text-muted">Что можно приготовить в мультиварке MARTA?</h3>
                 </div>
             </div>
             <div class="row">
