--- a/home/templates/home/includes/service.html
+++ b/home/templates/home/includes/service.html
@@ -5,8 +5,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Как получить мультиварку?</h2>
-                    <h3 class="section-subheading text-muted">Очень просто!</h3>
+                    <h2 class="section-heading">Я ХОЧУ МУЛЬТИВАРКУ MARTA!</h2>
+                    <h3 class="section-subheading text-muted">КАК ЕЕ ПОЛУЧИТЬ?</h3>
                 </div>
             </div>
             <div class="row text-center">
