--- a/home/templates/home/includes/testimonials.html
+++ b/home/templates/home/includes/testimonials.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Отзывы</h2>
-                    <h3 class="section-subheading text-muted">Мы купили мультиварку и хотим рассказать про это.</h3>
+                    <h3 class="section-subheading text-muted">У нас есть мультиварка Marta и мы хотим рассказать об этом:</h3>
                 </div>
             </div>
             <div class="row">
