--- a/home/templates/home/includes/product.html
+++ b/home/templates/home/includes/product.html
@@ -60,7 +60,7 @@
                         <p>
                                 <li><strong>обычная цена<h1>{{ product_item.price }} ₪</h1></strong></li>
                             {% if product_item.sale %}
-                                <li style="color: #e74c3c;"><strong>цена до Песаха<h1>{{ product_item.sale }} ₪</h1></strong></li>
+                                <li style="color: #e74c3c;"><strong>цена до 1 сентября<h1>{{ product_item.sale }} ₪</h1></strong></li>
                             {% endif %}
                             </p>
                             <div class="row text-center" style="box-shadow: 0px 4px 40px 3px rgba(0, 0, 0, 0.5);">
